WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 152795
Modern IDB: storage/indexeddb/intversion-gated-on-delete.html is flaky
https://bugs.webkit.org/show_bug.cgi?id=152795
Summary
Modern IDB: storage/indexeddb/intversion-gated-on-delete.html is flaky
Brady Eidson
Reported
2016-01-06 12:11:22 PST
Modern IDB: storage/indexeddb/intversion-gated-on-delete.html is flaky Set of open connections can be a list-set, making tests like these more reliable.
Attachments
Patch v1
(4.19 KB, patch)
2016-01-06 12:18 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-01-06 12:18:15 PST
Created
attachment 268387
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-01-06 14:22:04 PST
Comment on
attachment 268387
[details]
Patch v1 Clearing flags on attachment: 268387 Committed
r194670
: <
http://trac.webkit.org/changeset/194670
>
WebKit Commit Bot
Comment 3
2016-01-06 14:22:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug