Modern IDB: storage/indexeddb/intversion-gated-on-delete.html is flaky. https://bugs.webkit.org/show_bug.cgi?id=152795

Reviewed by Alex Christensen.

Source/WebCore:

No new tests (At least one failing test now passes).

Change the HashSet of open connection into a ListHashSet.

This enforces a reliable order of event delivery, which this test relies on,
and which seems better in general.

* Modules/indexeddb/server/UniqueIDBDatabase.cpp:
(WebCore::IDBServer::UniqueIDBDatabase::connectionClosedFromClient):
* Modules/indexeddb/server/UniqueIDBDatabase.h:

LayoutTests:

* platform/mac-wk1/TestExpectations:


Canonical link: https://commits.webkit.org/170898@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194670 268f45cc-cd09-0410-ab3c-d52691b4dbfc